# glorified_gantry

./: .envrc  .gitignore  3  Cargo.toml  flake.nix  justfile  readme.md  rust-toolchain.toml
gantry-cia402/: Cargo.toml
gantry-cia402/src/: error.rs  lib.rs  log.rs
gantry-cia402/src/comms/: sdo.rs
gantry-cia402/src/comms/pdo/: frame.rs  mod.rs
gantry-cia402/src/comms/pdo/mapping/: custom.rs  default.rs  mod.rs
gantry-cia402/src/driver/: command.rs  event.rs  mod.rs  nmt.rs  oms.rs  state.rs
gantry-cia402/src/driver/feedback/: receiver.rs
gantry-cia402/src/driver/feedback/frame/: log.rs  mod.rs  parse.rs
gantry-cia402/src/driver/oms/: home.rs  mod.rs  position.rs  setpoint.rs  torque.rs  velocity.rs
gantry-cia402/src/driver/receiver/: error.rs  mod.rs  setpoint_manager.rs  subscriber.rs
gantry-cia402/src/driver/receiver/frame/: log.rs  mod.rs  parse.rs  sdo_response.rs
gantry-cia402/src/driver/receiver/parse/: frame.rs  log.rs  mod.rs  pdo.rs  pdo_message.rs  sdo_response.rs
gantry-cia402/src/driver/startup/: home.rs  mod.rs  parametrise.rs  params.rs  pdo_mapping.rs
gantry-cia402/src/driver/state/: mod.rs  orchestrator.rs  state_machine.rs
gantry-cia402/src/driver/update/: mod.rs  publisher.rs
gantry-cia402/src/od/: entry.rs  mappable.rs  mod.rs  value.rs
gantry-cia402/tests/: basic.rs  cia.rs  common.rs  home.rs  nmt.rs  nmt_bootup.rs  parametrise.rs  pdo.rs  pos.rs  sdo_cia402.rs  startup.rs
gantry-demo/: Cargo.toml
gantry-demo/src/: lib.rs  main.rs
gantry-demo/tests/: basic.rs  common.rs  nmt_bootup.rs
gantry-gui/: Cargo.toml
(+69 files in other folders)
