[package]
name = "gantry-cia402"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
anyhow = "1.0.100"
oze-canopen = "0.1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.88"
tracing = "0.1.41"
bitflags = "2.9.4"
owo-colors = "4.2.3"
heapless = { version = "0.9.1", features = ["serde"] }
once_cell = "1.21.3"

[dev-dependencies]
gantry-demo = { path = "../gantry-demo/" } # For tracing setup
